# compass-interface

./: .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  LICENSE  README.md  RELEASE.md  RELEASE.rst  bandit.yml  build.py  codecov.yml  compass_data.py  docker-compose.yml  environment.yml  prospector.yml  pyproject.toml  requirements.txt  script.py  setup.cfg  setup.py  update_js.py
.github/workflows/: automatic-releaser.yml  deploy.yml  linting.yml  pre-commit.yml  publish-packages.yml  publish-release.yml  testing.yml
certificates/: compass_cert_one.pem
certs/: compass_cert_two.pem
ci/: RELEASE.md  bandit.yml  pyroma-version-fixer.py  requirements-api.txt  requirements-build.txt  requirements-core.txt  requirements-run.txt  requirements-test.txt  requirements-typing.txt
compass/: __init__.py  errors.py  hierarchy.py  interface.py  interface_base.py  logging.py  logon.py  people.py  reports.py  settings.py  utility.py
compass-metapackage/: pyproject.toml  setup.cfg
compass.api/: pyproject.toml
compass.api/src/compass/api/: app.py
compass.api/src/compass/api/resources/: hierarchy_flat.json
compass.api/src/compass/api/routes/: hierarchy.py  members.py
compass.api/src/compass/api/schemas/: auth.py  unit_records.py
compass.api/src/compass/api/util/: flatten_units.py  oauth2.py
compass.core/: pyproject.toml
compass.core/src/compass/core/: __init__.py  __version__.py  errors.py  hierarchy.py  interface.py  logon.py  people.py  typing.py
compass.core/src/compass/core/_scrapers/: contact.py  member_profile.py
compass.core/src/compass/core/types/: logon.py
compass.core/src/compass/core/util/: client.py  compass_helpers.py  context_managers.py  timeout.py  type_coercion.py
compass.experiments/: pyproject.toml
compass.experiments/src/compass/experiments/: __init__.py  hierarchy.py  interface.py  people.py
compass/_scrapers/: __init__.py  hierarchy.py  member.py  reports.py
compass/api/: app.py  backend.dockerfile
compass/api/plugins/: redis.py
compass/api/routes/: authentication.py  hierarchy.py  members.py
compass/api/schemas/: auth.py  unit_records.py
compass/api/util/: errors.py  flatten_units.py  http_errors.py  oauth2.py  redis.py
compass/api/utility/: compass_people_interface.py  flatten_units.py  oauth2.py  redis.py  redis_handler.py  reports_interface.py
compass/core/: __init__.py  __version__.py  errors.py  hierarchy.py  interface_base.py  logger.py  logon.py  people.py  reports.py  settings.py  utility.py
compass/core/_scrapers/: contact.py  hierarchy.py  member.py  member_profile.py  reports.py  role_detail.py
compass/core/schemas/: hierarchy.py  logon.py  member.py  reports.py
compass/core/types/: hierarchy.py  logon.py  member.py  reports.py
compass/core/util/: auth_header.py  cache_hooks.py  client.py  compass_helpers.py  context_managers.py  counting_session.py  time_cache.py  type_coercion.py
compass/schemas/: __init__.py  hierarchy.py  member.py
compass/util/: __init__.py  cache.py  hierarchy.py  people.py
compass/utils/: utility.py
docker/: backend.dockerfile  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py
examples/: sync_365.py  sync_365_config.example.toml
js/: Dates.js  Grids.js  Menu.js  Popup.js  QAS.js  Scouts.js  adultjoining.js  assignnewrole.js  editprofile.js  extenders.js  hierarchy.js  jQuery191.js  master.js  memberprofile.js  membersearch.js  membertraining.js  neworgentity.js  newpermit.js  newrole.js  newsection.js  reports.js  roles.js  scoutsportal.js  searchresults.js  settings.js  traininghours.js  trainingogl.js  updatetraining.js
src/: compass_data.py  compass_hierarchy.py  compass_logon.py  compass_people.py  compass_reports.py  interface.py  utility.py
src/api/: app.py  backend.dockerfile  startup.sh
src/api/database/: database.py  interface.py  tables.py
src/api/plugins/: redis.py
src/api/routes/: authentication.py  members.py
src/api/schemas/: auth.py  member.py
src/api/utility/: compass_people_interface.py  oauth2.py  redis_handler.py  reports_interface.py
src/compass/: errors.py  hierarchy.py  logon.py  people.py  reports.py  settings.py
tests/: conftest.py  test_compass_core_errors.py  test_compass_core_hierarchy.py  test_compass_core_init.py  test_compass_core_interface_base.py  test_compass_core_logger.py  test_compass_core_logon.py  test_compass_core_schemas_hierarchy.py  test_compass_core_schemas_member.py  test_compass_core_scrapers_contact.py  test_compass_core_scrapers_member_profile.py  test_compass_core_scrapers_member_reduce_date_list.py  test_compass_core_scrapers_reports.py  test_compass_core_scrapers_role_detail.py  test_compass_core_settings.py  test_compass_core_util_client.py  test_compass_core_util_compass_helpers.py  test_compass_core_util_context_managers.py  test_compass_core_util_type_coercion.py  test_compass_core_utility.py
tests/compass/core/: test_compass_core_errors.py  test_compass_core_interface_base.py  test_compass_core_logon.py  test_compass_core_utility.py
tests/compass/core/schemas/: test_compass_core_schemas_hierarchy.py  test_compass_core_schemas_member.py
tests/compass/core/scrapers/: test_compass_core_scrapers_member_reduce_date_list.py
tests/util/: fake_compass.py  http.py
tools/: build_subpackages.py  bumper.py  prepare_release.py
