# Build system requirements.
[build-system]
requires = ["setuptools>=41.0", "wheel"]  #"setuptools-scm",
build-backend = "setuptools.build_meta"

# Black configuration
[tool.black]
line-length = 132  # 120*1.1
target-version = ["py38"]  # Remember to change this if we change pins from Python 3.9!  TODO black does not yet support 3.9 (13-01-2021)

# isort configuration
[tool.isort]
line_length = 132
profile = "google"
py_version = "39"
skip_gitignore = true
known_tests = ['tests']
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', "TESTS", 'LOCALFOLDER']

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.2"
norecursedirs = "tests/util"
testpaths = [
    "tests",
]

# pylint configuration
[tool.pylint]
MASTER.persistent="n"  # pylint runs on CI, so no point saving
MASTER.jobs=0  # auto-detect the number of processors to use
DESIGN.max-statements=60
FORMAT.max-line-length=132

[tool.pylint."MESSAGES CONTROL"]
disable = [
   "fixme",
   "too-few-public-methods",  # pydantic models have 0 public methods, we would have ~50 local excludes
   "import-error",  # pylint does not (2021-03-20) support namespace packages
   "logging-fstring-interpolation",  # f-strings are quicker than %-formatting
   # https://docs.pylint.org/en/latest/faq.html#i-am-using-another-popular-linter-alongside-pylint-which-messages-should-i-disable-to-avoid-duplicates
   # pycodestyle duplication
   "unneeded-not",
   "line-too-long",
   "unnecessary-semicolon",
   "trailing-whitespace",
   "missing-final-newline",
   "bad-indentation",
   "multiple-statements",
   "bare-except",
   # pyflakes duplication
   "undefined-variable",
   "unused-import",
   "unused-variable",
   # McCabe duplication
   "too-many-branches",
   # pydocstyle duplication
   "missing-module-docstring",
   "missing-class-docstring",
   "missing-function-docstring",
   # pep8-naming duplication
   "invalid-name",
   "bad-classmethod-argument",
   "bad-mcs-classmethod-argument",
   "no-self-argument",
   # isort duplication
   "wrong-import-order",
]
