# Build system requirements.
[build-system]
requires = ["setuptools>=41.0", "wheel"]  #"setuptools-scm",
build-backend = "setuptools.build_meta"

# Black configuration
[tool.black]
line-length = 132  # 120*1.1
target-version = ["py39"]  # Remember to change this if we change pins from Python 3.9!

# isort configuration
[tool.isort]
line_length = 132
profile = "google"
py_version = "39"
skip_gitignore = true
known_namespace = ['compass']
known_tests = ['tests']
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'NAMESPACE', 'FIRSTPARTY', "TESTS", 'LOCALFOLDER']
