# setuptools metadata
[metadata]
name = compass-interface-core
version = 0.13.0
# version = attr: src.VERSION
description = The unofficial API to the TSA Compass membership database
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Turner
url = https://github.com/the-scouts/compass-interface-core
license = MIT
license_file = LICENSE
platforms = any
# Classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Utilities
keywords = API, scouts

# setuptools options
[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.9
install_requires =
    requests
    lxml
    pydantic
    email-validator
    phonenumberslite

[options.packages.find]
# consider moving to src/ layout to remove this:
include = compass*

[mypy]
plugins = pydantic.mypy
# help finding errors
show_error_codes = True
show_error_context = True
# suppress errors from imported modules
follow_imports = silent
# warn about config that doesn't hit files
warn_unused_configs = True

# mypy --strict config:
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True

[mypy-lxml]
ignore_missing_imports = true
[mypy-phonenumbers]
ignore_missing_imports = true

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

# flake8 configuration
[flake8]
max-complexity = 15
max-line-length = 132
classmethod-decorators = classmethod, validator

# pydocstyle configuration
[pydocstyle]
convention = google
# re-enable D413, Missing blank line after last section
add_select = D413
# ignore missing docstrings in public modules, public classes, public methods, and public functions
add_ignore = D100, D101, D102, D103
