# setuptools metadata
[metadata]
name = compass-interface
version = 0.24.0
# version = attr: compass.VERSION
description = Providing a unified (well-documented) API to the Scouts' national membership system, Compass.
long_description = file: README.md
long_description_content_type=  text/markdown
keywords =
    API, scouts
author = Adam Turner
url = https://github.com/the-scouts/compass-interface
license = MIT
license_files = LICENSE
# Classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Utilities
platforms = any

# setuptools options
[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    compass-interface-core>=0.20.0
    fastapi>=0.65.1
    pydantic>=1.8.2
    cryptography
    python-jose
    aioredis
    python-multipart

[options.packages.find]
include=compass*

[options.package_data]
compass.api = resources/hierarchy_flat.json

[options.extras_require]
deploy =
    uvicorn
    uvloop
    httptools
reports =
    pandas
    pyarrow
