# setuptools metadata
[metadata]
name = compass-interface
version = 0.26.0
description = The unofficial API to the Scouts' national membership system, Compass
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Turner
url = https://github.com/the-scouts/compass-interface
license = MIT
license_files = LICENSE
platforms = any
# Classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Utilities
keywords = API, scouts

# setuptools options
[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    httpx~=0.20
    lxml
    pydantic>=1.8.2
    email-validator>=1.1.0
    phonenumberslite

[options.packages.find]
# consider moving to src/ layout to remove this:
include=compass*

[options.package_data]
compass.api = resources/hierarchy_flat.json

[options.extras_require]
api =
    compass-interface-core>=0.20.0
    fastapi>=0.65.1
    pydantic>=1.8.2
    cryptography
    python-jose
    python-multipart
deploy =
    uvicorn
    uvloop
    httptools
reports =
    pandas
    pyarrow
