[metadata]
name = compass-interface
version = 0.26.0
description = The unofficial API to the Scouts' national membership system, Compass
long_description = This is now a meta-package that installs compass-interface-core.
long_description_content_type = text/markdown
author = Adam Turner
url = https://github.com/the-scouts/compass-interface
license = MIT
platforms = any
# Classifiers list: https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Utilities
keywords = API, scouts

[options]
install_requires =
    compass-interface-core == 0.26.0
