# Build system requirements.
[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "compass_interface_core"
description = "The unofficial API to the Scouts' national membership system, Compass"
readme = "../README.md"
urls.Homepage = "https://github.com/the-scouts/compass-interface"  # Homepage is what setuptools used to set
urls.Source = "https://github.com/the-scouts/compass-interface"
license.file = "../LICENSE"  # only gets included in sdist as flit assumes a hardcoded path for wheels (TODO report bug)
classifiers = [  # Classifiers list: https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
keywords = ["API", "scouts"]
dynamic = ["version"]

# project requirements
requires-python = ">=3.9"
dependencies = [
    "httpx~=0.20",
    "lxml",
    "pydantic>=1.8.2",
    "email-validator>=1.1.0",
    "phonenumberslite",
]

[[project.authors]]
name = "Adam Turner"

# the module's import name
[tool.flit.module]
name = "compass.core"
