# Build system requirements.
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# project metadata
[project]
name = "compass_interface_experiments"
version = "0.21.0"
description = "The unofficial API to the Scouts' national membership system, Compass"
readme = "../README.md"
urls.Homepage = "https://github.com/the-scouts/compass-interface"  # Homepage is what setuptools used to set
urls.Source = "https://github.com/the-scouts/compass-interface"
license.file = "../LICENSE"  # only gets included in sdist as flit assumes a hardcoded path for wheels (TODO report bug)
classifiers = [  # Classifiers list: https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
keywords = ["API", "scouts"]

# project requirements
requires-python = ">=3.9"
dependencies = [
    "compass_interface_core>=0.27.0",
    "pandas",
    "pyarrow",
]
optional-dependencies.deploy = [
    "uvicorn",
    "uvloop",
    "httptools",
]

[[project.authors]]
name = "Adam Turner"

# the module's import name
[tool.flit.module]
name = "compass.experiments"
